--- a/catkin_ws/src/path_trackers/pure_pursuit/CMakeLists.txt
+++ b/catkin_ws/src/path_trackers/pure_pursuit/CMakeLists.txt
@@ -11,11 +11,12 @@ find_package(catkin REQUIRED COMPONENTS
   sensor_msgs
   nav_msgs
   geometry_msgs
+  ackermann_msgs
 )
 
 catkin_package()
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_executable(pure_pursuit src/tracker.cpp)
+add_executable(pure_pursuit src/pure_pursuit.cpp)
 target_link_libraries(pure_pursuit ${catkin_LIBRARIES})
