--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "catkin_ws/src/catkin_ws/src/POLARIS_GEM_e2"]
 	path = catkin_ws/src/catkin_ws/src/POLARIS_GEM_e2
 	url = https://gitlab.engr.illinois.edu/gemillins/POLARIS_GEM_e2
+[submodule "catkin_ws/src/POLARIS_GEM_e2"]
+	path = catkin_ws/src/POLARIS_GEM_e2
+	url = https://gitlab.engr.illinois.edu/gemillins/POLARIS_GEM_e2
