Add new package and functionality
Signed-off-by: Camilo Andres Alvis Bautista <kmilo7204@gmail.com>

--- a/catkin_ws/src/path_generator/CMakeLists.txt
+++ b/catkin_ws/src/path_generator/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(pure_pursuit)
+project(path_generator)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -8,16 +8,13 @@ find_package(catkin REQUIRED COMPONENTS
   message_generation
   roscpp
   roslib
-  std_msgs
-  sensor_msgs
   nav_msgs
-  geometry_msgs
-  ackermann_msgs
 )
 
 catkin_package()
 
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-add_executable(pure_pursuit src/pure_pursuit.cpp)
-target_link_libraries(pure_pursuit ${catkin_LIBRARIES})
+add_executable(path_generator src/path_generator.cpp)
+target_link_libraries(path_generator ${catkin_LIBRARIES})
+
