--- a/catkin_ws/src/path_generator/package.xml
+++ b/catkin_ws/src/path_generator/package.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>pure_pursuit</name>
+  <name>path_generator</name>
   <version>0.0.0</version>
-  <description>The pure_pursuit package</description>
+  <description>The path_generator package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
-  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="kmilo7204@gmail.com">Camilo Alvis</maintainer>
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
   <license>TODO</license>
+
   <build_depend>roslib</build_depend>
   <build_export_depend>roslib</build_export_depend>
   <exec_depend>roslib</exec_depend>
