Cleaning Cmakelists for the plugin package
Signed-off-by: Camilo Andres Alvis Bautista <kmilo7204@gmail.com>

--- a/catkin_ws/src/gazebo_plugins/CMakeLists.txt
+++ b/catkin_ws/src/gazebo_plugins/CMakeLists.txt
@@ -1,7 +1,6 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(gazebo_plugins)
 
-## Compile as C++11, supported in ROS Kinetic and newer
 add_compile_options(-std=c++11)
 
 find_package(catkin REQUIRED COMPONENTS
@@ -10,11 +9,10 @@ find_package(catkin REQUIRED COMPONENTS
   nav_msgs
 )
 
-# Depend on system install of Gazebo
+# Search gazebo package, required for the plugin
 find_package(gazebo REQUIRED)
 
 catkin_package(
-  # INCLUDE_DIRS include
   CATKIN_DEPENDS roscpp std_msgs nav_msgs
 )
 
